--- a/ProductCatalogAPI/ProductCatalogAPI.csproj
+++ b/ProductCatalogAPI/ProductCatalogAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>8465528c-7f23-4085-9064-165efeaecf18</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
